# personal-website

./: .eslintignore  .eslintrc.js  .gitconfig  .gitignore  Dockerfile  README.md  package-lock.json  package.json  vue.config.js
public/: index.html
src/: App.vue  main.js  router.js  store.js
src/api/: api.js
src/client/: client.js
src/components/: ContentBoxA.vue  ContentBoxBorder.vue  ContentBoxSlim.vue  ContentWindow.vue  ContentWindowB.vue  EventItem.vue  HeroTitle.vue  HighlightBox.vue  InteractiveHeader.vue  IntroText.vue  JFooter.vue  JNav.vue  JShapes.vue  MediaButton.vue  NavButtonRow.vue  Particles.vue  ProjectDescripBox.vue  ProjectList.vue  ProjectListItem.vue  ProjectTile.vue  ProjectTiles.vue  TagGroup.vue  UnderConstruction.vue
src/lib/: Cargo.toml
src/lib/src/: lib.rs
src/lib/src/model/: github.rs  mastodon.rs  mod.rs
src/views/: About.vue  BaseView.vue  Home.vue  HomePage.vue  NavLess.vue  Projects.vue  ProjectsPage.vue
tests/unit/: env.spec.js  example.spec.js
