[package]
name = "lib"
version = "0.1.0"
authors = ["User"]
description = "Rust crate to gen wasm functions for my website"
edition = "2018"
license = "BSD-2-Clause"
repository = "https://github.com/malinoskj2/website-backend"

[lib]
crate-type = ["cdylib"]

[dependencies]
cfg-if = "0.1.5"
wasm-bindgen = { version = "0.2.29", features = ["serde-serialize"]  }
console_error_panic_hook = { version = "0.1.5", optional = true }
wee_alloc = { version = "0.4.2", optional = true }

futures = "0.1.20"
js-sys = "0.3.6"
wasm-bindgen-futures = "0.3.6"
serde = { version = "1.0.80", features = ["derive"] }
serde_derive = "^1.0.59"

[dependencies.web-sys]
version = "0.3.4"
features = [
  'Headers',
  'Request',
  'RequestInit',
  'RequestMode',
  'Response',
  'Window',
]

[features]
default = ["console_error_panic_hook"]

[profile.release]
lto = true
opt-level = 's'