[package]
name = "lib"
version = "0.2.0"
authors = ["User"]
description = "Rust crate to gen wasm functions for my website"
edition = "2018"
license = "BSD-2-Clause"
repository = "https://github.com/malinoskj2/website-backend"

[lib]
crate-type = ["cdylib"]

[dependencies]
cfg-if = "0.1.5"
wasm-bindgen = { version = "0.2.29" }
console_error_panic_hook = { version = "0.1.5", optional = true }
wee_alloc = { version = "0.4.2", optional = true }

futures = "0.1.20"
js-sys = "0.3.6"
wasm-bindgen-futures = "0.3.6"

[dependencies.web-sys]
version = "0.3.4"
features = [
  'Headers',
  'Request',
  'RequestInit',
  'RequestMode',
  'Response',
  'Window',
]

[features]
default = ["console_error_panic_hook", "wee_alloc"]

[profile.release]
lto = true
opt-level = 's'